# aular

./: .gitignore  LICENSE  README.md  package-lock.json  package.json
.github/workflows/: desktop.yml
apps/desktop/: .env.shipping  index.html  package.json  tsconfig.json  vite.config.ts
apps/desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns  render-icons.py
apps/desktop/src-tauri/resources/hermes/: config.yaml
apps/desktop/src-tauri/resources/hermes/hooks/aular-toolfeed/: HOOK.yaml  handler.py
apps/desktop/src-tauri/resources/hermes/plugins/aular/: adapter.py  plugin.yaml
apps/desktop/src-tauri/src/: lib.rs  license.rs  main.rs  menu.rs  runtime.rs  sidecar.rs
core/: go.mod  go.sum  migrate.go
core/agentspec/: agentspec.go  agentspec_test.go
core/engine/: engine.go
core/migrations/: 00002_users.sql  00003_agents.sql  00004_agent_profiles.sql  00005_projects.sql  00006_tasks.sql  00007_conversations.sql  00008_messages.sql  00009_calendar_events.sql  00010_routines.sql  00011_memories.sql  00012_tool_calls.sql  00013_approval_requests.sql  00014_audit_events.sql  00015_tool_definitions.sql  00016_agent_profile_templates.sql  00017_agent_profiles_add_template_id.sql  00018_conversations_last_read.sql  00019_routines_agent_cron.sql  00020_usage_events.sql  00021_agent_profiles_reports_to.sql  00022_dispatches.sql  00023_documents.sql  00024_dispatch_watchdog.sql  00025_app_settings.sql  (+4 more)
docs/: architecture.md
scripts/: build-sidecar.sh
(+155 files in other folders)
